apps/overlays/zion/gitlab/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
