apps/overlays/zion/gitlab/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitlab.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: zion-gitlab
          port: 80
      middlewares:
        - name: zion-gitlab-auth-middleware
        - name: zion-gitlab-cors
    - match: Host(`gitlab.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: auth-traefik-outpost
          port: 9000
      middlewares:
        - name: zion-gitlab-auth-middleware
        - name: zion-gitlab-cors
  tls:
    secretName: gitlab-certificate-secret
---
apiVersion: v1
kind: Service
metadata:
  name: auth-traefik-outpost
  namespace: gitlab
spec:
  type: ExternalName
  externalName: auth-traefik-outpost.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
